fix: get the documented legacy migration process actually running end to end
The documented migration invocation (--spring.main.web-application-type=none)
had apparently never been executed end to end. Running it against a real
legacy MySQL snapshot surfaced and fixed:

- Instant bound directly to Postgres JDBC params, which pgjdbc cannot
  type-infer (8 call sites across the migration package)
- CacheConfiguration requiring a web-only ServerProperties bean in headless
  mode
- Migration mode silently disabling the app's real Postgres datasource,
  because legacySourceDataSource satisfied Boot's
  @ConditionalOnMissingBean(DataSource.class) guard
- Web-only Spring Security beans (AuthenticationManagerBuilder, HttpSecurity)
  required in headless mode, since @RestController beans are still
  instantiated regardless of web-application-type
- 060_enrollments.sql using a non-unique legacy column (enrollment_id, a
  shared per-round batch code) as the promotion identity key, causing
  "ON CONFLICT DO UPDATE command cannot affect row a second time"

With these fixed, the full pipeline (archive, typed promotion, file
migration) now runs cleanly end to end. See docs/migration/DRY_RUN.md for
the run log and docs/migration/KNOWN_GAPS.md for the legacy data-quality
gaps found and accepted along the way.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01KYNPg5g3KPszMjhwzanosT